Add WASM support for i64 simple opcodes.
Created attachment 286298 [details] Patch
Attachment 286298 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/wasm/WASMOps.h:44: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMOps.h:45: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMOps.h:46: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMOps.h:48: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMOps.h:49: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMOps.h:59: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMOps.h:82: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMOps.h:84: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMOps.h:91: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMOps.h:92: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/wasm/WASMB3IRGenerator.cpp:57: Non-label code inside switch statements should be indented. [whitespace/indent] [4] Total errors found: 11 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Comment on attachment 286298 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=286298&action=review r=me > Source/JavaScriptCore/wasm/WASMOps.h:101 > + > + > Don't think we need 3 blank lines.
Created attachment 286349 [details] Patch for landing
Comment on attachment 286349 [details] Patch for landing Rejecting attachment 286349 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 286349, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/JavaScriptCore/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/1889914
Created attachment 286350 [details] Patch for landing
Comment on attachment 286350 [details] Patch for landing Rejecting attachment 286350 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'build', '--no-clean', '--no-update', '--build-style=release', '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: lumes/Data/EWS/WebKit/Tools/DumpRenderTree/mac/WorkQueueItemMac.mm -o /Volumes/Data/EWS/WebKit/WebKitBuild/DumpRenderTree.build/Release/DumpRenderTree\ (Library).build/Objects-normal/x86_64/WorkQueueItemMac.o ** BUILD FAILED ** The following build commands failed: CompileC /Volumes/Data/EWS/WebKit/WebKitBuild/DumpRenderTree.build/Release/DumpRenderTree\ (Library).build/Objects-normal/x86_64/TestRunner.o TestRunner.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler (1 failure) Full output: http://webkit-queues.webkit.org/results/1889987
Created attachment 286352 [details] Patch for landing
Comment on attachment 286352 [details] Patch for landing Clearing flags on attachment: 286352 Committed r204588: <http://trac.webkit.org/changeset/204588>
All reviewed patches have been landed. Closing bug.