Add WASM support for i64 simple opcodes. https://bugs.webkit.org/show_bug.cgi?id=160928

Reviewed by Michael Saboff.

This patch also removes the unsigned int32 mod operator, which is not supported by B3 yet.

* wasm/WASMB3IRGenerator.cpp:
(JSC::WASM::toB3Op):
(JSC::WASM::B3IRGenerator::unaryOp):
* wasm/WASMFunctionParser.h:
(JSC::WASM::WASMFunctionParser<Context>::parseExpression):
* wasm/WASMOps.h:


Canonical link: https://commits.webkit.org/179073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204588 268f45cc-cd09-0410-ab3c-d52691b4dbfc